# pyclassifier

./: LICENCE  LICENSE  README.md  classifier.py  setup.cfg
src/pyclassifier/: __init__.py  classifier.py
src/pyclassifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
