[metadata]
name = pyclassifier
version = 0.0.2
author = Rahman Sharifi
author_email = sharifi.rahman.4651@gmail.com
description = A module to create classes out of dictionaries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rahmansharifi/pyclassifier
project_urls =
    Bug Tracker = https://github.com/rahmansharifi/pyclassifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
